--- a/flutter_practice/ios/Podfile
+++ b/flutter_practice/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '12.0'
+platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -43,7 +43,8 @@ post_install do |installer|
         target.build_configurations.each do |config|
           config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
             '$(inherited)',
-            'PERMISSION_CONTACTS=1'
+            'PERMISSION_CONTACTS=1',
+            'PERMISSION_NOTIFICATIONS=1',
           ]
         end
   end
