--- a/flutter_practice/pubspec.yaml
+++ b/flutter_practice/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_contacts: ^1.1.9+2
   firebase_core: ^3.12.1
   firebase_messaging: ^15.2.4
+  flutter_local_notifications: ^19.0.0
 
 dev_dependencies:
   flutter_test:
